dcm rotation js update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2156,6 +2156,12 @@ input[type="text"]:disabled {
   .box-shadow-style();
 }
 
+@media @mobile {
+  .timesec {
+    right: 45%;
+  }
+}
+
 
 /* Loading */
 @keyframes infSpin {
