atm1d pointer events update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2425,7 +2425,7 @@ input[type='number'] {
 
 /* atm1d bug fix */
 .atm1d span {
-    pointer-events: none;
+    pointer-events: none !important;
 }
 
 
