--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -87,6 +87,8 @@
 .box-shadow-style() {
   box-shadow: 0 4px 6px -1px @boxShadowColor, 0 2px 4px -2px @boxShadowColor;
 }
+@custom-border-color: #ccc;
+@custom-border-up-color: #959595;
 
 
 @border-color:                contrast(#060A45, darken(#060A45, 20%), lighten(#060A45, 15%)); // See the README for explanation on what contrast() mixin does.
@@ -1481,7 +1483,7 @@ select {
 }
 
 .comment-box {
-  border : 1px solid #ccc;
+  border : 1px solid @custom-border-color;
   border-radius: 10px;
   width : 100%;
   max-width : @custom-max-width;
@@ -1502,7 +1504,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Grid question mobile css */
 .grid-list-mode {
     .row-elements {
-        border: 1px solid #ccc;
+        border: 1px solid @custom-border-color;
         border-radius: 10px;
         .box-shadow-style();
         overflow: hidden;
@@ -1510,20 +1512,20 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .row-legend-left {
         font-weight: bold;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid @custom-border-color;
         padding-bottom: 10px;
     }
 
     .row-legend-right {
         font-weight: bold;
-        border-top: 1px solid #ccc;
+        border-top: 1px solid @custom-border-color;
         padding-top: 10px;
         margin-bottom: 10px;
     }
 
     .mobile-group-legend {
         font-weight: bold;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid @custom-border-color;
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
@@ -1534,7 +1536,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .col-legend {
         font-weight: bold;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid @custom-border-color;
         padding-bottom: 10px;
         padding-top: 10px;
     }
@@ -1570,7 +1572,7 @@ input[type="number"]::-webkit-inner-spin-button {
                 width: 20px;
                 height: 20px;
                 background-color: #fff;
-                border: 1px solid #ccc;
+                border: 1px solid @custom-border-color;
                 border-radius: 4px;
             }
 
@@ -1653,7 +1655,7 @@ input[type="number"]::-webkit-inner-spin-button {
         }
 
         .row-elements {
-            border: 1px solid #ccc;
+            border: 1px solid @custom-border-color;
             padding: 10px;
             border-radius: 10px;
             .box-shadow-style();
@@ -1661,20 +1663,20 @@ input[type="number"]::-webkit-inner-spin-button {
 
         .row-legend-left {
             font-weight: bold;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid @custom-border-color;
             padding-bottom: 10px;
         }
 
         .row-legend-right {
             font-weight: bold;
-            border-top: 1px solid #ccc;
+            border-top: 1px solid @custom-border-color;
             padding-top: 10px;
             margin-bottom: 10px;
         }
 
         .mobile-group-legend {
             font-weight: bold;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid @custom-border-color;
             padding-bottom: 10px;
             margin-bottom: 10px;
         }
@@ -1772,7 +1774,7 @@ input[type="number"]::-webkit-inner-spin-button {
   font-weight: bold;
   margin-top: 20px;
   margin-bottom: 5px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid @custom-border-color;
   width: 100%;
   text-align: left;
   font-size: 1.5rem;
@@ -1958,7 +1960,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 // Toggle Group css
 .ch-group-toggle {
-  border: 1px solid #ccc;
+  border: 1px solid @custom-border-color;
   .box-shadow-style();
   border-radius: 10px;
   margin-bottom: 10px;
@@ -2196,7 +2198,7 @@ input[type="text"]:disabled {
 
     .question {
       max-width: 400px;
-      border: 1px solid #ccc;
+      border: 1px solid @custom-border-color;
       border-radius: 10px;
       .box-shadow-style();
       overflow: hidden;
@@ -2213,7 +2215,7 @@ input[type="text"]:disabled {
 
     .question-text {
       font-weight: bold;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid @custom-border-color;
       padding: 10px 10px 10px 20px;
       transition: color, background-color 0.5s;
     }
@@ -2433,5 +2435,60 @@ input[type='number'] {
 .sq-slidernumber {
   .answers {
     max-width: 924px;
+  }
+}
+
+
+/* Custom Button */
+.sp-custom-btn {
+  .answers {
+    .element {
+      padding: unset;
+      overflow: hidden;
+      border-radius: 7px;
+      margin-bottom: 3px;
+
+      .cell-text {
+        width: 100%;
+        max-width: 924px;
+        padding: unset;
+      }
+
+      .cell-sub-wrapper {
+        padding-left: 0.25em;
+        border-radius: 7px;
+        border: 1px solid @custom-border-up-color;
+        width: 100%;
+        max-width: 924px;
+        display: block;
+        .box-shadow-style();
+        transition: background-color 0.5s;
+        overflow: hidden;
+
+        &:hover {
+          background-color: @custom-sub-color;
+        }
+      }
+
+      label {
+        width: 100%;
+        display: block;
+        padding: 10px;
+      }
+
+      .cell-input {
+        transform: scale(0.8);
+      }
+    }
+  }
+}
+
+@media @mobile {
+  .sp-custom-btn {
+    .answers {
+      .element {
+        max-width: 100%;
+      }
+    }
   }
 }
