custom btn update v2

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2447,6 +2447,7 @@ input[type='number'] {
       overflow: hidden;
       border-radius: 7px;
       margin-bottom: 3px;
+      cursor: pointer;
 
       .cell-text {
         width: 100%;
@@ -2460,7 +2461,6 @@ input[type='number'] {
         border: 1px solid @custom-border-up-color;
         width: 100%;
         max-width: 924px;
-        display: block;
         .box-shadow-style();
         transition: background-color 0.5s;
         overflow: hidden;
