custom button error modify

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1246,6 +1246,12 @@ body {
   background-color: @custom-sub-color !important;
 }
 
+.sq-accordion-header {
+    transition: background 0.5s;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
 .selected-row .sq-accordion-header {
   background: @custom-color !important;
   color: #fff !important;
