custom btn label css update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2490,7 +2490,7 @@ input[type='number'] {
       .cell-text {
         width: 100%;
         max-width: 924px;
-        padding: unset;
+        padding: 7px;
       }
 
       .cell-sub-wrapper {
@@ -2509,9 +2509,8 @@ input[type='number'] {
       }
 
       label {
-        width: 100%;
-        display: block;
         padding: 10px;
+        display: contents;
       }
     }
   }
