custom btn modfiy

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2531,8 +2531,12 @@ input[type='number'] {
       }
 
       label {
-        padding: 10px;
-        display: contents;
+        display: flex;
+        align-items: center;
+      }
+
+      input[type=text] {
+        margin-left: 2px;
       }
     }
   }
