toggle group update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2371,6 +2371,7 @@ input[type="text"]:disabled {
 
 .fir-icon.selected .rounded .fir-selected, .fir-icon.selected .square .fir-selected {
   r: 5;
+  fill: @custom-text-color !important;
 }
 
 
