less css modify

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1547,6 +1547,7 @@ input[type="number"]::-webkit-inner-spin-button {
         font-weight: bold;
         border-bottom: 1px solid @custom-border-color;
         padding-bottom: 10px;
+        min-width: 100% !important;
     }
 
     .row-legend-right {
