custom button hover modify

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2549,6 +2549,12 @@ input[type='number'] {
     .answers {
       .element {
         max-width: 100%;
+        .cell-sub-wrapper {
+          &:hover {
+            background-color: unset;
+          }
+        }
+
       }
     }
   }
