custom btn update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2533,8 +2533,7 @@ input[type='number'] {
       }
 
       label {
-        display: flex;
-        align-items: center;
+        display: inline-block;
       }
 
       input[type=text] {
