--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2067,6 +2067,18 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
+.sp-custom-btn {
+  .ch-group-rows {
+    .element {
+      .cell-text {
+        label {
+          background-color: unset !important;
+        }
+      }
+    }
+  }
+}
+
 @media @mobile{
   .ch-group-toggle {
     .element {
