custom button shortcut update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1411,7 +1411,7 @@ select {
           width: 100% !important;
           max-width: none;
           max-height: 50px;
-          display: flex !important;
+          display: flex;
           align-items: center;
           text-align: left;
         }
